# frontend/openapi.json
@@ -87,6 +87,11 @@
       },
       "AgentIn": {
         "properties": {
+          "code_mode": {
+            "default": false,
+            "title": "Code Mode",
+            "type": "boolean"
+          },
           "connection_ids": {
             "default": [],
             "items": {
@@ -122,6 +127,10 @@
             "title": "Can Edit",
             "type": "boolean"
           },
+          "code_mode": {
+            "title": "Code Mode",
+            "type": "boolean"
+          },
           "connection_ids": {
             "items": {
               "format": "uuid",
@@ -154,6 +163,7 @@
           "name",
           "instructions",
           "connection_ids",
+          "code_mode",
           "can_edit",
           "created_at"
         ],
